--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prime-sample-app",
+  "name": "prime-sample-app-openshift",
   "version": "1.0.0",
   "description": "",
   "scripts": {
