--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.4",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1"
   }
 }
